nuevos cambios en routes y views

--- a/src/views/layouts/vistaTorneo.hbs
+++ b/src/views/layouts/vistaTorneo.hbs
@@ -9,6 +9,9 @@
     <link rel="stylesheet" type="text/css" href="/vistaTorneo.css">
 </head>
 <body>
+<div>
+      {{torneo.nombre}}
+</div>
 
 <div id="toutTitleDivOut" class="center">
     <div id="tourTitleDiv">
@@ -38,15 +41,15 @@
     <div id="tourPlayerList">
         {{!-- meter un foreach aqui o algo --}}
         <div class="userListEntry">
-            <img class="userListIcon" src="./fotos/iconos/user.png" alt="">
+            <img class="userListIcon" src="../../fotos/iconos/user.png" alt="">
             <span class="userListName">Alejandro</span>
         </div>
         <div class="userListEntry">
-            <img class="userListIcon" src="./fotos/iconos/user.png" alt="">
+            <img class="userListIcon" src="../../fotos/iconos/user.png" alt="">
             <span class="userListName">Roberto</span>
         </div>
         <div class="userListEntry">
-            <img class="userListIcon" src="./fotos/iconos/user.png" alt="">
+            <img class="userListIcon" src="../../fotos/iconos/user.png" alt="">
             <span class="userListName">Fernando</span>
         </div>
     </div>
@@ -60,41 +63,41 @@
             <div class="encounterList">
                 <div class="encounter">
                     <div class="encounterPlayer">
-                        <img class="userListIcon" src="./fotos/iconos/user.png" alt="">
+                        <img class="userListIcon" src="../../fotos/iconos/user.png" alt="">
                         <span class="userListName">Alejandro</span>
                     </div>
                     <div class="encounterPlayer">
-                        <img class="userListIcon" src="./fotos/iconos/user.png" alt="">
+                        <img class="userListIcon" src="../../fotos/iconos/user.png" alt="">
                         <span class="userListName">Fernando</span>
                     </div>
                 </div>
                 <div class="encounter">
                     <div class="encounterPlayer">
-                        <img class="userListIcon" src="./fotos/iconos/user.png" alt="">
+                        <img class="userListIcon" src="../../fotos/iconos/user.png" alt="">
                         <span class="userListName">Roberto</span>
                     </div>
                     <div class="encounterPlayer">
-                        <img class="userListIcon" src="./fotos/iconos/user.png" alt="">
+                        <img class="userListIcon" src="../../fotos/iconos/user.png" alt="">
                         <span class="userListName">Laura</span>
                     </div>
                 </div>
                 <div class="encounter">
                     <div class="encounterPlayer">
-                        <img class="userListIcon" src="./fotos/iconos/user.png" alt="">
+                        <img class="userListIcon" src="../../fotos/iconos/user.png" alt="">
                         <span class="userListName">Ramon</span>
                     </div>
                     <div class="encounterPlayer">
-                        <img class="userListIcon" src="./fotos/iconos/user.png" alt="">
+                        <img class="userListIcon" src="../../fotos/iconos/user.png" alt="">
                         <span class="userListName">Albert</span>
                     </div>
                 </div>
                 <div class="encounter">
                     <div class="encounterPlayer">
-                        <img class="userListIcon" src="./fotos/iconos/user.png" alt="">
+                        <img class="userListIcon" src="../../fotos/iconos/user.png" alt="">
                         <span class="userListName">Anastasia</span>
                     </div>
                     <div class="encounterPlayer">
-                        <img class="userListIcon" src="./fotos/iconos/user.png" alt="">
+                        <img class="userListIcon" src="../../fotos/iconos/user.png" alt="">
                         <span class="userListName">Bernardo</span>
                     </div>
                 </div>
