--- a/src/views/partials/listaTorneos.hbs
+++ b/src/views/partials/listaTorneos.hbs
@@ -20,7 +20,7 @@
       </td>
       <td>
         Miembros: {{ participantes }} / 200<br>
-        <a href="/torneos/detalleTorneo/{{id_torneo}}"><button>Únete</button></a>
+        <a href="torneos/vistaTorneo/{{id_torneo}}"><button>Únete</button></a>
       </td>
     </tr>
     {{/each }}
