--- a/src/public/style.css
+++ b/src/public/style.css
@@ -42,44 +42,7 @@ body{
   min-height: 90vh;
 }
 
-/*Header*/
 
-header{
-  position: sticky;
-  top: 0;
-  color: black;
-  background-color: #A45ED5;
-  height: 10%;
-  padding: 0 16px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  font-weight: bold;
-}
-
-header > div{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-header > div:nth-child(2) > a{
-  text-align: center;
-}
-
-#logo{
-  width: 60%;
-  margin: 15px 0;
-  padding-left: 25%;
-}
-
-header > div:nth-child(3) > a > img{
-  width: 25px;
-  margin-right: 10px;
-}
-
-/*End header*/
 
 /*Footer*/
 
@@ -91,17 +54,11 @@ footer{
   width: 100%;
   padding: 1% 5%;
   display: flex;
-  flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   font-weight: bold;
-  height: 2.5rem;  
-}
-
-footer > div{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+  height: 2.5rem;
+  color: var(--text2);
 }
 
 /*End footer*/
