--- a/src/public/profile.css
+++ b/src/public/profile.css
@@ -41,4 +41,8 @@
     text-align: center;
     border-radius: 10px;
     background-color: var(--bgPage);
+    font-weight: bold;
+}
+#createTourButton:hover {
+    background-color: var(--bgDark);
 }
