--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./header.css">
-    <link rel="stylesheet" type="text/css" href="./vistaTorneo.css">
+    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/header.css">
+    <link rel="stylesheet" type="text/css" href="/vistaTorneo.css">
 </head>
 <body>
 
@@ -16,20 +16,20 @@
 <nav id="header">
 
     <div id="navLeftDiv">
-        <a href=""><img class="navIcon" src="./fotos/iconos/search.png"></a>
-        <a href=""><img class="navIcon" src="./fotos/iconos/torneo.png"></a>
-        <a href=""><img class="navIcon" src="./fotos/iconos/amigos.png"></a>
+        <a href=""><img class="navIcon" src="/fotos/iconos/search.png"></a>
+        <a href=""><img class="navIcon" src="/fotos/iconos/torneo.png"></a>
+        <a href=""><img class="navIcon" src="/fotos/iconos/amigos.png"></a>
     </div>
 
     <div id="navMidDiv">
-        <a href="/"><img id="logo" src="./fotos/iconos/logo.png"></a>
+        <a href="/"><img id="logo" src="/fotos/iconos/logo.png"></a>
     </div>
 
     <div id="navRightDiv" class="center">
 
         <div id="navUserDiv" tabindex="1">
             <span class="navUserName">{{user.correo}}</span>
-            <img class="navIcon" src="./fotos/iconos/user.png">
+            <img class="navIcon" src="/fotos/iconos/user.png">
             <div id="userDropMenu">
                 <div class="userDropRow" id="loginRow">
                     <a class="navLink" href="/login">Iniciar sesión</a>
