--- a/src/views/main.hbs
+++ b/src/views/main.hbs
@@ -34,11 +34,11 @@
 
 
         <div class="tabcontent" id="dos" style="display: none;">
-          dos
+          <img src="./fotos/banner/clashroyale.jpg">
         </div>
 
         <div class="tabcontent" id="tres" style="display: none;">
-          tres
+          <img src="./fotos/banner/callofduty.jpg">
         </div>
       </div>
       <div class="tab">
@@ -46,7 +46,7 @@
           <button class="tablinks active" id="defaultOpen" onclick="openTab(event, 'uno')">Rainbow Six Siedge</button>
         </div>
         <div>
-          <button class="tablinks" onclick="openTab(event, 'dos')">Torneos diarios</button>
+          <button class="tablinks" onclick="openTab(event, 'dos')">Clash Royale</button>
         </div>
         <div>
           <button class="tablinks" onclick="openTab(event, 'tres')">Call of Duty</button>
