--- a/src/views/layouts/editarTorneo.hbs
+++ b/src/views/layouts/editarTorneo.hbs
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+    {{> header}}
+
     <div id="content">
         <div id="regFormDiv">
             <form action="/torneos/add" method="POST">
@@ -70,7 +72,7 @@
         </div>
         </form>
     </div>
-
+    {{> footer}}
 </body>
 
 </html>
