header en vistaTorneo

--- a/src/views/layouts/vistaTorneo.hbs
+++ b/src/views/layouts/vistaTorneo.hbs
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+     {{> header }}
      <div id="toutTitleDivOut" class="center">
           <div id="tourTitleDiv">
                {{#each torneo }}
