Select de juegos
Para que salgan solo de las fotos que tenemos

--- a/src/views/layouts/registroTorneo.hbs
+++ b/src/views/layouts/registroTorneo.hbs
@@ -42,7 +42,13 @@
                 <div class="regBody">
                     <div class="regFormRow">
                         <span class="regFormLabel">Juego a jugar</span>
-                        <input type="text" placeholder="Nombre juego" name="juego">
+                        <select name="juego" id="tourFormat">
+                            <option value="Fortnite">Fortnite</option>
+                            <option value="Clash Royale">Clash Royale</option>
+                            <option value="Smashville">Smashville</option>
+                            <option value="Mortal Kombat">Mortal Kombat</option>
+                            <option value="Rainbow Six Siedge">Rainbow Six Siedge</option>
+                        </select>
                     </div>
                     <div class="regFormRow">
                         <span class="regFormLabel">Formato</span>
