--- a/src/views/layouts/login.hbs
+++ b/src/views/layouts/login.hbs
@@ -17,10 +17,10 @@
     <span id="formTitle">Log in</span>
     
     <div class="regSection">
-        <form action="/login" method="POST"
+        <form action="/login" method="POST">
             <div class="regBody">
               <div class="regFormRow">
-                <span class="regFormLabel">Username</span>
+                <span class="regFormLabel">Correo</span>
                 <input id="correo" name="correo" type="text" autocomplete="username" required autofocus>
               </div>
             </div>
