--- a/src/views/layouts/profile.hbs
+++ b/src/views/layouts/profile.hbs
@@ -29,12 +29,12 @@
      <div id="profileTitleDiv">
           <img id="profileUserImg" src="./fotos/iconos/user.png" alt="">
           <div id="profileUserInfo">
-               <span id="profileUserText">{{user.correo}}</span>
+               <span id="profileUserText">{{user.alias}}</span>
                <span class="profileUserSubtext">Nombre: {{user.nombre}}</span>
                <span class="profileUserSubtext">Apellido: {{user.apellido}}</span>
-               <span class="profileUserSubtext">Alias: {{user.alias}}</span>
+               <span class="profileUserSubtext">Correo: {{user.correo}}</span>
                <span class="profileUserSubtext">Telefono: {{user.telefono}}</span>
-               <span class="profileUserSubtext">Registrado desde: {{user.fecha_comienzo}}</span>
+               <span class="profileUserSubtext">Registrado desde: {{user.fecha_creacion}}</span>
           </div>
      </div>
 </div>
