--- a/src/views/layouts/signup.hbs
+++ b/src/views/layouts/signup.hbs
@@ -20,19 +20,19 @@
             <div class="regBody">
               <div class="regFormRow">
                 <span class="regFormLabel">Nombre</span>
-                <input id="nombre" name="nombre" type="text" autocomplete="nombre">
+                <input id="nombre" name="nombre" type="text" autocomplete="nombre" required>
               </div>
             </div>
             <div class="regBody">
               <div class="regFormRow">
                 <span class="regFormLabel">Apellido</span>
-                <input id="apellido" name="alias" type="text" autocomplete="apellido">
+                <input id="apellido" name="apellido" type="text" autocomplete="apellido" required>
               </div>
             </div>
             <div class="regBody">
               <div class="regFormRow">
                 <span class="regFormLabel">Username</span>
-                <input id="username" name="username" type="text" autocomplete="username">
+                <input id="alias" name="alias" type="text" autocomplete="username" required>
               </div>
             </div>
             <div class="regBody">
@@ -50,7 +50,7 @@
             <div class="regBody">
               <div class="regFormRow">
                 <span class="regFormLabel">Telefono</span>
-                <input id="telefono" name="telefono" type="tel" autocomplete="telefono" >
+                <input id="telefono" name="telefono" type="tel" autocomplete="telefono">
               </div>
             </div>
             <div>¿Ya tienes cuenta? <a id="crear" href="/login">Inicia Sesión</a></div><br>
