--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -28,7 +28,7 @@
     <div id="navRightDiv" class="center">
 
         <div id="navUserDiv" tabindex="1">
-            <span class="navUserName">{{user.correo}}</span>
+            <span class="navUserName">{{user.alias}}</span>
             <img class="navIcon" src="/fotos/iconos/user.png">
             <div id="userDropMenu">
                 <div class="userDropRow" id="loginRow">
